# tifo_project

./: CMakeLists.txt  main.cpp
src/: filters.cc  filters.hh  histogram.cc  histogram.hh  histogram_operations.cc  histogram_operations.hh  image.cc  image.hh  image_convert.cc  image_convert.hh  image_io.cc  image_io.hh  image_operations.cc  image_operations.hh  image_to_qt.cc  image_to_qt.hh  main_window.hh
